# rete

./: NOTES.md  README.md  main.py  pyproject.toml
data/: actions.json  formats.yaml  rules.json  schemas.json  test-facts.json
rete/: __init__.py  main.py  network.py  nodes.py  parser.py  validator.py
